# ATLAS-Trading-System

./: .crypto_session_startup_prompt.md  .dashboard_session_prompt.md  .dockerignore  .gitattributes  .gitignore  .session_options_backtest_prompt.md  .session_startup_prompt.md  ATLAS_PRODUCTION_READINESS_CHECKLIST.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  Dockerfile.old  OPENING_PROMPT.md  PLOTLY_DASH_DASHBOARD_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  SESSION_50_PHASE1_ANALYSIS.md  SESSION_50_SYSTEM_COMPARISON.md  backtest_atlas_integration.py  backtest_regime_strategies.py  daily_tiingo_update.py  docker-compose.yml  export_regimes_for_tradingview.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  regime_performance_analysis.py  requirements-railway.txt  run_dashboard.sh  test_multi_asset_backtest.py  test_results.txt  validation_log_312.txt  validation_log_83k_57.txt  validation_log_83k_57_thetadata.txt  validation_log_expanded.txt  validation_log_timefilter.txt  visualize_regime_overlay.py
.claude/: claude-code-initial-setup-prompt.md  development_state.json  mcp.json  settings.json  statusline.sh.backup
Claude Desktop Layer Proposals/: CLAUDE_CODE_HANDOFF.md  CLAUDE_CODE_IMPLEMENTATION_GUIDE.md  STRAT_OPTIONS_STRATEGY_HANDOFF.md
analysis/: __init__.py  vix_data.py
backtest/: backtest_phase1.py  backtest_phase2.py  backtest_system_a.py
config/: __init__.py  settings.py
core/: order_validator.py
crypto/: __init__.py  config.py
dashboard/: README.md  app.py  config.py  theme.py
data/: enriched_trades.json
deploy/: atlas-crypto-daemon.service  atlas-signal-api.service
docs/: ATLAS_SYSTEM_STATUS_COMPREHENSIVE.md  CLAUDE.md  (+46 more)
(+689 files in other folders)
